--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0%;
-    background-color: rgb(201, 177, 149);
+    background-color: rgb(0, 0, 0);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -10,8 +10,8 @@ a {
 
 ._head {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: rgb(250, 250, 250);
     position: fixed;
-    background-color: rgb(217, 201, 201);
     width: 100%;
     height: 13%;
     display: flex;
@@ -19,7 +19,6 @@ a {
 }
 
 .kontakt {
-    font-size: 15px;
     margin-top: 1%;
     align-items: center;
     width: 20%;
@@ -28,7 +27,7 @@ a {
 }
 
 .KT {
-    font-size: 18px;
+    font-size: 100%;
 }
 
 .messenger {
@@ -41,7 +40,6 @@ a {
 
 .main-icon {
     display: flex;
-    margin-left: 1%;
     align-items: center;
     flex-direction: column;
     justify-content: center;
@@ -57,4 +55,69 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.main-picture {
+    padding-top: 17%;
+    width: 100%;
+    height: 600px;
+}
+
+.picture {
+    width: 100%;
+    height: 100%;
+    background-image: url(/picture/BUGATTI_Divo_2019_552153_1920x1080.jpg);
+    background-size: cover;
+}
+
+.label {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 100%;
+}
+
+.oname {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    color: rgb(231, 54, 54);
+    justify-content: center;
+    align-items: center;
+    font-size: 44px;
+    width: 100%;
+    height: 33%;
+}
+
+.spis {
+    list-style: square;
+    font-size: 22px;
+    color: rgb(231, 54, 54);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+li {
+    margin-bottom: 3%;
+}
+
+.btt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+}
+
+.bt1 {
+    background-color: rgb(143, 75, 75);
+    border-radius: 20%;
+    width: 25%;
+    height: 120%;
+    border: 15px;
+}
+
+.bt1:hover {
+    background-color: rgb(231, 54, 54);
+    border-radius: 0%;
+    width: 25%;
+    height: 120%;
+    border: 15px;
 }
