--- a/autopark.css
+++ b/autopark.css
@@ -43,8 +43,8 @@
         flex-direction: column;
         justify-content: center;
         width: 20%;
-
-        font-size: calc(20px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));
+        
+        font-size: 2vw;
     }
     .menu {
         position: fixed;
@@ -98,13 +98,13 @@
     }
     .link {
         color: black;
-        font-size: 23px;
         width: 40%;
         margin-left: 2%;
         margin-right: 2%;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        font-size: 1.2vw;
     }
     .main-picture {
         padding-top: 6%;
@@ -188,7 +188,7 @@
         margin-left: 2%;
         margin-top: 2%;
         width: 30%;
-        height: 500px;
+        height: 50%;
     }
     .block:hover {
         color: black;
@@ -197,7 +197,7 @@
         margin-left: 2%;
         margin-top: 2%;
         width: 30%;
-        height: 500px;
+        height: 50%;
     }
     .part1 {
         margin: 1% 0% 0% 1%;
@@ -216,10 +216,10 @@
         height: 30%;
     }
     .glname {
-        font-size: 22px;
+        font-size: 3vw;
     }
     .glname:hover {
-        font-size: 23px;
+        font-size: 3.1vw;
         font-weight: 500;
     }
     .name {
@@ -230,19 +230,21 @@
         justify-content: space-between;
     }
     .carek {
-        font-size: 16px;
+        font-size: 1vw;
         font-weight: 600;
     }
     .cost {
-        text-align: center;
-        font-size: 25px;
+        text-align: center; 
+        font-size: 3vw;
         color: rgb(152, 221, 253);
         -webkit-text-stroke: 0.5px #000000; /* Толщина и цвет обводки */
     }
     .bt2 {
         font-family: "Russo One", sans-serif;
+        font-size: 1.3vw;
         background-color: rgb(152, 221, 253);
         border: 1px solid #000000;
+        width: auto;
     }
     .bt2:hover {
         background-color: rgb(73, 74, 76);
@@ -344,7 +346,7 @@
     }
 }
 
-@media (max-width: 420px) {
+@media (max-width: 480px) {
     body {
         overflow-x: hidden;
         scrollbar-width: 0%;
