--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
         width: 20%;
         height: 100%;
         display: block;
+        visibility: hidden;
     }
     .KT {
         font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));
@@ -37,6 +38,7 @@
         display: flex;
         justify-content: space-between;
         width: 20%;
+        visibility: hidden;
     }
     .main-icon {
         display: flex;
@@ -45,11 +47,11 @@
         justify-content: center;
         width: 20%;
         
-        font-size: calc(20px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));
+        font-size: 2vw;
     }
     .link {
         color: black;
-        font-size: 23px;
+        font-size: 1.2vw;
         width: 40%;
         margin-left: 2%;
         margin-right: 2%;
@@ -66,7 +68,7 @@
         background: #FFEFBA;
         transform: translateX(-100%);
         transition: transform 0.5s;
-        font-size: calc(20px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));
+        font-size: 2vw;
     }
     .menu.active {
         transform: translateX(0);
@@ -155,7 +157,7 @@
     }
     .bt1 {
         font-weight: 500;
-        font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1400));
+        font-size: 1.3vw;
         background-color: #0FA3B1;
         border-radius: 20%;
         width: 25%;
@@ -186,6 +188,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        padding: 5%;
     }
     .blockSlider {
         margin-top: 2%;
@@ -200,6 +203,7 @@
         margin-right: auto;
         position: relative;
         overflow: hidden;
+        padding: 1%;
     }
     .FullArea {
         display: flex;
@@ -607,6 +611,7 @@
         justify-content: center;
         align-items: center;
         width: 90%;
+        font-size: 1.2vw;
     }
     .bt1 {
         font-weight: 500;
@@ -851,15 +856,16 @@
         justify-content: space-between;
         align-items: center;
         flex-direction: column;
+        
     }
     .Grodno {
-        font-size: 17px;
+        font-size: 1.5vw;
         margin-top: 5%;
         font-size: 180%;
         font-weight: 500;
     }
     .text1 {
-        font-size: 8px;
+        font-size: 1.3vw;
         margin-left: 7%;
     }
     .yy {
