--- a/stylekon.css
+++ b/stylekon.css
@@ -26,6 +26,7 @@
         width: 20%;
         height: 100%;
         display: block;
+        visibility: hidden;
     }
     .KT {
         font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));
@@ -36,6 +37,7 @@
         display: flex;
         justify-content: space-between;
         width: 20%;
+        visibility: hidden;
     }
     .main-icon {
         display: flex;
@@ -48,7 +50,7 @@
     }
     .link {
         color: black;
-        font-size: 23px;
+        font-size: 1.2vw;
         width: 40%;
         margin-left: 2%;
         margin-right: 2%;
