--- a/stylekon.css
+++ b/stylekon.css
@@ -17,6 +17,7 @@
         width: 100%;
         height: 13%;
         display: flex;
+        justify-content: space-between;
         margin-left: 0%;
     }
     .kontakt {
